--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -104,7 +104,7 @@
 .modal__form-policy:checked + .modal__form-policy-text::before {
     background-color: $brand-color;
     border: 3px solid $brand-color;
-    background-image: url("/images/Vector.svg");
+    background-image: url("../images/Vector.svg");
     fill: $primary-address-color;
 }
 
